# PWHomeWork9additional_by_Scrapy

./: README.md  main.py  pyproject.toml
data/: authors.json  quotes.json
