[tool.poetry]
name = "pwhomework9additional-by-scrapy"
version = "0.1.0"
description = ""
authors = ["Jymbarbaruoky <116517553+Jymbarbaruoky@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "pwhomework9additional_by_scrapy"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.8.0"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
